Fix 'from last smoking'